# CSHACK-2026-LKP

./: .gitignore  AGENT.md  README.md  environment.macos.yaml  environment.yaml
backend/: .env  .env.example  AGENT.md  INTERACTIVE_LAYERS.md  LAYERS.md  README.md  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/engine/: __init__.py  (+12 more)
backend/tests/: test_drone_detection_tick.py  test_flow_advection.py  test_grid_engine.py  test_grid_geometry.py  test_layers_and_mpp.py  test_marine_current.py  test_mission_modes.py  test_particle_filter.py  test_path_optimizer.py  test_personality.py  test_road_anisotropic_diffusion.py  test_sea_drift.py  test_terrain_and_controls.py  test_topo_reachability.py
figure_recognition/: README.md  detect_live.py  detect_offline.py  merge_gps.py  prepare_drone_data.py
figure_recognition/results/: detections.jsonl  drone.merge_report.json  live_server.pid  person_detection_output.jsonl
figure_recognition/samples/: drone_find.csv  drone_find.json  good_drone_not_found.csv
figure_recognition/tests/: test_prepare_drone_data.py
frontend/: .env  .env.example  AGENT.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
scripts/: slurm_setup.sh
topo_layout/: .gitignore  README.md  pyproject.toml
topo_layout/tests/: test_mapbox_live.py  test_mobility.py  test_preprocessing.py  test_terrain.py
topo_layout/topo_layout/: __init__.py  cli.py  mapbox_live.py  mobility.py  preprocessing.py  terrain.py
topo_layout/topo_layout/web/: index.html
(+66 files in other folders)
